[feature] [sp02] [mssousa] Alteração de status do usuário